<resources>
    <string name="app_name">Greenspot</string>
    <string name="spot_title_label">Title</string>
    <string name="spot_title_hint">Title here</string>
    <string name="spot_details_label">Details\n</string>
    <string name="spot_place_label">Place</string>
    <string name="spot_place_hint">Place here</string>
    <string name="gps_location_text">GPS Location</string>
    <string name="get_location_button">Get Location!</string>
    <string name="show_map_button">Show Map!</string>
    <string name="help_button">Help</string>
    <string name="new_spot">New Spot</string>
    <string name="Coordinates">%1$d, %2$d</string>
    <string name="spot_date_label">Date</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
</resources>