<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_title_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/spot_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/spot_title_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/spot_date_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <Button
        android:id="@+id/spot_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_place_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/spot_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/spot_place_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/spot_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Coordinates" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location_button" />

    <Button
        android:id="@+id/show_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map_button" />

    <ImageView
        android:id="@+id/spotPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Take a Photo!" />

</LinearLayout>